--- a/res/layout/manifest_view.xml
+++ b/res/layout/manifest_view.xml
@@ -40,6 +40,7 @@
 		<TextView android:text="" android:id="@+id/mv_size"
 			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
 	</TableRow>
+	
 	<TableRow android:id="@+id/tableRow6" android:layout_width="wrap_content"
 		android:layout_height="wrap_content">
 		<TextView android:text="@string/mv_hash_p" android:id="@+id/textView3"
@@ -47,6 +48,17 @@
 		<TextView android:text="" android:id="@+id/mv_hash"
 			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
 	</TableRow>
+	
+	<TableRow android:id="@+id/tableRow7" android:layout_width="wrap_content" android:layout_height="wrap_content">
+		<TextView android:text="@string/mv_hash_ok_p" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+		<TextView android:text="" android:id="@+id/mv_hash_ok" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+	</TableRow>
+	
+	<TableRow android:id="@+id/tableRow8" android:layout_width="wrap_content" android:layout_height="wrap_content">
+		<TextView android:text="@string/mv_sign_ok_p" android:id="@+id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+		<TextView android:text="" android:id="@+id/mv_sign_ok" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+	</TableRow>
+	
 	<Button android:text="@string/mv_back" android:id="@+id/mv_back" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
 </TableLayout>
 
