--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -6,4 +6,7 @@
     <item android:id="@+id/m_new_keys"
           android:icon="@drawable/ic_menu_new_keys"
           android:title="@string/m_new_keys" />
+    <item android:id="@+id/m_reinit_list"
+          android:icon="@drawable/ic_menu_reinit_list"
+          android:title="@string/m_reinit_list" />          
 </menu>
